# 0din-JEF

./: .buildinfo  .gitignore  CHANGELOG.md  CLI_README.md  README.md  SECURITY.md  framework.html  genindex.html  getting-started.html  index.html  integrations.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  framework.doctree  getting-started.doctree  index.doctree  integrations.doctree  usage.doctree
.github/: CODEOWNERS  dependabot.yml
_sources/: index.rst.txt  integrations.rst.txt
api/: jef.anthrax.html  jef.chinese_censorship.html  jef.chinese_censorship.score_tiananmen.html  jef.chinese_censorship.tiananmen.constants.html  jef.chinese_censorship.tiananmen.html  jef.chinese_censorship.tiananmen.score.html  jef.chinese_censorship.tiananmen.score_v1.html  jef.copyrights.constants.html  jef.copyrights.fingerprints.html  jef.copyrights.harry_potter.html  jef.copyrights.harry_potter.references.html  jef.copyrights.harry_potter.score.html  jef.copyrights.harry_potter.score_v1.html  jef.copyrights.html  jef.copyrights.report.html  jef.copyrights.score.html  jef.copyrights.score_copyright.html  jef.copyrights.score_copyright_harry_potter.html  jef.copyrights.score_v1.html  jef.copyrights.utils.html  jef.crispr.html  jef.fentanyl.html  jef.genetic_manipulation.crispr.constants.html  jef.genetic_manipulation.crispr.html  jef.genetic_manipulation.crispr.score.html  jef.genetic_manipulation.crispr.score_v1.html  jef.genetic_manipulation.crispr.utils.html  jef.genetic_manipulation.html  (+46 more)
jef/: cli.py  (+5 more)
(+180 files in other folders)
